Fixed header svg alignment for Firefox

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -211,6 +211,7 @@ a.button {
 
   svg {
     display: block;
+    margin: 0 auto;
   }
 }
 .circle {
